# learnqml

./: CMakeLists.txt  README.md
dialog/: CMakeLists.txt  main.qml
drawer/: CMakeLists.txt  main.qml
label/: CMakeLists.txt  main.qml
listview/: CMakeLists.txt  main.cpp  main.qml  qtquickcontrols2.conf
listview/images/: images.qrc
loader/: main.qml
rectangle/: CMakeLists.txt  main.qml
textinput/: main.qml
