cmake_minimum_required(VERSION 3.5)

project(learnqml)

add_subdirectory(rectangle)
add_subdirectory(label)
add_subdirectory(textinput)
add_subdirectory(layout)
add_subdirectory(loader)
add_subdirectory(dialog)
add_subdirectory(drawer)
add_subdirectory(diystyle)
add_subdirectory(icons_theme)
add_subdirectory(serialdriver)
add_subdirectory(database)
add_subdirectory(quickwidget)
add_subdirectory(canvas)
add_subdirectory(pagemanager)
add_subdirectory(listview)
